# dataexcel

./: CMakeLists.txt  README.md  README_WINDOWS_BUILD.md  build.bat  build.sh  vcpkg.json
.github/workflows/: build-windows.yml
app/: CMakeLists.txt  FindReplaceDialog.cpp  FindReplaceDialog.h  FormatCellsDialog.cpp  FormatCellsDialog.h  FormulaBar.cpp  FormulaBar.h  MainWindow.cpp  MainWindow.h  SheetTabBar.cpp  SheetTabBar.h  SpreadsheetView.cpp  SpreadsheetView.h  TileCache.cpp  TileCache.h  main.cpp
cmake/: QtSpreadsheetConfig.cmake.in  deploy_windows.cmake  mingw-w64-x86_64.cmake
data/: generate_sample.py  sample_data.csv
dll/FileLoader/: CMakeLists.txt  CsvLoader.cpp  CsvLoader.h  FileLoader.cpp  OpsLoader.cpp  OpsLoader.h  XlsxLoader.cpp  XlsxLoader.h  XlsxSaxLoader.cpp  XlsxSaxLoader.h
dll/FormulaEngine/: CMakeLists.txt  FormulaEngine.cpp  Functions.cpp  Functions.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
dll/PluginSystem/: CMakeLists.txt  PluginManager.cpp  PluginManager.h
dll/PythonEngine/: CMakeLists.txt  PythonEngine.cpp
dll/RibbonUI/: CMakeLists.txt  ColorButton.cpp  ColorButton.h  RibbonWidget.cpp
dll/SpreadsheetCore/: CMakeLists.txt  SpreadsheetCore.cpp  UndoStack.cpp  UndoStack.h
dll/SpreadsheetEngine/: CMakeLists.txt  SpreadsheetTableModel.cpp
engine/: CMakeLists.txt
engine/include/engine/: CellAddress.h  EngineModel.h  SpreadsheetEngine.h
engine/src/: EngineModel.cpp  SpreadsheetEngine.cpp
include/FileLoader/: IFileLoader.h
include/FormulaEngine/: FormulaEngine.h
include/PluginSystem/: IPlugin.h
include/PythonEngine/: IPythonEngine.h
include/RibbonUI/: RibbonWidget.h
include/SpreadsheetCore/: ISpreadsheetCore.h
include/SpreadsheetEngine/: SpreadsheetTableModel.h
installer/: OpenSheet.iss  OpenSheet.nsi  QtSpreadsheet.nsi  build_installer.bat
plugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp
prompts/: 00_project_goal.md  01_architecture.md  02_cpp_qt_ui.md  03_spreadsheet_engine.md  05_formula_engine.md  06_file_formats.md  07_performance_and_memory.md  08_plugin_system.md  09_windows_installer.md  1  10_ci_cd_build.md
python/: requirements.txt
python/data_engine/: __init__.py  ipc_server.py  spark_engine.py
resources/: app.rc
